fixed bug on portrait page causing arrow spacing to be incorrect and descriptions to not wrap and currently viewing portrait to be impossible to open by right-clicking

--- a/myapp/static/myapp/css/portrait.css
+++ b/myapp/static/myapp/css/portrait.css
@@ -49,7 +49,7 @@
 }
 
 .myslide {
-  display: none;
+  opacity: 0;
   height: calc(85vh - 220px);
 }
 
